--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
