--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc",
+    "start": "node dist/src/server.js",
     "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
+    "knex:migrate": "knex --knexfile dist/knexfile.js migrate:latest",
+    "knex:migrate:rollback": "knex --knexfile dist/knexfile.js migrate:rollback",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
