--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/src/server.js",
     "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "knex:migrate": "knex --knexfile dist/knexfile.js migrate:latest",
-    "knex:migrate:rollback": "knex --knexfile dist/knexfile.js migrate:rollback",
+    "knex:rollback": "knex --knexfile dist/knexfile.js migrate:rollback",
     "build": "tsc"
   },
   "devDependencies": {
